<resources>
    <string name="app_name">KotlinApp</string>
    <string name="hello_button">Button</string>
    <string name="hello_text">Hello World!</string>
    <string name="movie_search">Поиск фильмов</string>
    <string name="filter">Фильтр</string>

    <string name="reload">Reload</string>

    <!-- GENRES-->
    <string name="anime">Аниме</string>
    <string name="biographies">Биографии</string>
    <string name="action">Боевики</string>
    <string name="western">Вестерны</string>
    <string name="military">Военные</string>
    <string name="detective">Детективы</string>
    <string name="childlike">Детские</string>
    <string name="documentary">Документальные</string>
    <string name="drama">Драмы</string>
    <string name="games">Игры</string>
    <string name="historical">Исторические</string>
    <string name="comedy">Комедии</string>
    <string name="concert">Концерты</string>
    <string name="short_film">Короткометражки</string>
    <string name="crime">Криминал</string>
    <string name="melodrama">Мелодрамы</string>
    <string name="music">Музыкальные</string>
    <string name="cartoon">Мультфильмы</string>
    <string name="musical">Мюзиклы</string>
    <string name="news">Новсти</string>
    <string name="adventures">Приключения</string>
    <string name="tv">Реальное ТВ</string>
    <string name="family">Семейные</string>
    <string name="sportive">Спортивные</string>
    <string name="talk_shows">Ток-шоу</string>
    <string name="thriller">Триллеры</string>
    <string name="horrors">Ужасы</string>
    <string name="fantastic">Фантастика</string>
    <string name="noir">Фильмы-нуар</string>
    <string name="fantasy">Фэнтези</string>
    <string name="ceremonies">Цеременоии</string>


    <string name="settings">Настройки</string>
    <string name="favourites">Избранное</string>
    <string name="main">Главная</string>
    <string name="title_movie_search">Подбор фильмов</string>
    <string name="title_settings">Настройки</string>
    <string name="title_favourites">Избранное</string>
    <string name="setting_rating9">Отображение только фильмов с рейтигом больше 9.0</string>
    <string name="contacts">Контакты</string>

    <!-- LOCATION-->
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите
узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно.
Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная
локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>



</resources>