<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moviesearch.MovieSearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior = "@string/appbar_scrolling_view_behavior"
            app:menu="@menu/menu_filter"
            app:title="@string/movie_search">

        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            tools:visibility="visible">

            <HorizontalScrollView
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_anime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anime" />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_biographies"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/biographies" />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action" />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_western"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/western" />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_military"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/military" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_detective"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detective"  />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_childlike"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/childlike" />-->

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_documentary"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/documentary"  />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_drama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drama"  />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_games"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/games"  />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_historical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/historical"  />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_comedy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comedy"  />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_concert"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/concert"  />-->

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_short_film"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/short_film"  />-->

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_crime"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/crime"  />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_melodrama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/melodrama"  />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_music"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/music"  />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_cartoon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cartoon"  />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_musical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/musical"  />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_news"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/news"  />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_adventures"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adventures"  />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_tv"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/tv"  />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_family"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/family"  />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_sportive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sportive"  />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_talk_shows"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/talk_shows"  />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_thriller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thriller"  />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_horrors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/horrors"  />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_fantastic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fantastic"  />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_noir"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/noir"  />-->

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/chip_fantasy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fantasy"  />

<!--                    <com.google.android.material.chip.Chip-->
<!--                        style="@style/Widget.MaterialComponents.Chip.Filter"-->
<!--                        android:id="@+id/chip_ceremonies"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/ceremonies"  />-->

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:rating="5.0"
                android:numStars="10"
                android:stepSize="0.5"
                android:isIndicator="false"
                app:layout_constraintEnd_toStartOf="@+id/seekBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="2022"
                android:min="1890"
                android:progress="2000"
                app:layout_constraintEnd_toStartOf="@+id/text_year"
                app:layout_constraintStart_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@+id/genres" />

            <TextView
                android:id="@+id/text_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/seekBar"
                app:layout_constraintTop_toBottomOf="@+id/genres"
                tools:text="year"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieSearchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_behavior = "@string/appbar_scrolling_view_behavior"
        >
    </androidx.recyclerview.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        tools:visibility="visible">
        <ProgressBar style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>